--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Qahiri&display=swap"
+      rel="stylesheet"
+    />
     <title>Leaderboard</title>
   </head>
   <body>
@@ -10,20 +16,17 @@
     <main>
       <div class="lest-side">
         <div class="left-title">
-          Recent scores <span><button class="btn">refresh</button></span>
+          Recent scores
+          <span><button class="btn-refresh">refresh</button></span>
         </div>
-        <div class="list">
-          <table id="table">
-            <tbody id="myTable"></tbody>
-          </table>
-        </div>
+        <div class="list"></div>
       </div>
       <div class="right-side">
         <div class="right-title">your score</div>
         <div>
           <form action="#">
-            <input type="text" placeholder="Name" />
-            <input type="text" placeholder="Score" />
+            <input type="text" placeholder="Name" class="gameName" />
+            <input type="text" placeholder="Score" class="score" />
             <input type="submit" id="sub" />
           </form>
         </div>
